force-app/main/default/objects/Reader__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Displays date of the last synchronization</description>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>