force-app/main/default/objects/Reader__c/recordTypes/Hall_Reader.recordType-meta.xml
<RecordType>
    <fullName>Hall_Reader</fullName>
    <active>true</active>
    <description>For readers with one - time subscription.</description>
    <label>Hall Reader</label>
</RecordType>