force-app/main/default/objects/Reader__c/validationRules/Number_Of_Hold_Books_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Of_Hold_Books_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISPICKVAL(Subscription_Type__c, &quot;One-time&quot;), Number_Of_Hold_Books__c &gt; 0),
AND(
ISPICKVAL(Subscription_Type__c, &quot;VIP&quot;),
Number_Of_Hold_Books__c  &gt;  15),
AND(
ISPICKVAL(Subscription_Type__c, &quot;Month&quot;),
Number_Of_Hold_Books__c &gt; 5),
AND(
ISPICKVAL(Subscription_Type__c, &quot;Year&quot;),
Number_Of_Hold_Books__c &gt; 5)
)</errorConditionFormula>
    <errorMessage>Reader with &quot;one-time&quot; subscription can take 0 books home, with &quot;month&quot; and &quot;year&quot; - max 5 books and with &quot;VIP&quot; - max 15 books.</errorMessage>
</ValidationRule>